--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,5 @@
 # Add implementations for CNG interfaces here.
+
+#add_library(CNG pane.cpp)
+add_library(CNG mainloop.cpp)
+target_link_libraries(CNG curses)
