--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,14 @@
 # Add implementations for CNG interfaces here.
 
-#add_library(CNG pane.cpp)
-add_library(CNG mainloop.cpp)
+if(_CNG_NODEFAULT_GS_)
+	set(DEFAULT_GS_SOURCES "")
+else()
+	set(DEFAULT_GS_SOURCES 
+		nullGs.h 
+		nullGs.cpp
+		defaultGs.h
+		defaultGs.cpp)
+endif()
+
+add_library(CNG mainloop.cpp ${DEFAULT_GS_SOURCES})
 target_link_libraries(CNG curses)
