--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,14 +1,20 @@
 # Add implementations for CNG interfaces here.
+set(${CNG_SOURCES} "")
 
+# Configure the code for main loop subsystem.
+set(CNG_SOURCES ${CNG_SOURCES} mainloop.cpp)
+
+# Configure the code for default graphics subsystem.
 if(_CNG_NODEFAULT_GS_)
-	set(DEFAULT_GS_SOURCES "")
+	# Do not add default Gs sources.
 else()
-	set(DEFAULT_GS_SOURCES 
-		nullGs.h 
+	set(CNG_SOURCES ${CNG_SOURCES}
+		defaultGs.cpp
 		nullGs.cpp
-		defaultGs.h
-		defaultGs.cpp)
+		nullGs.h 
+		defaultGs.h)
 endif()
 
-add_library(CNG mainloop.cpp ${DEFAULT_GS_SOURCES})
+# Assemble the code together.
+add_library(CNG ${CNG_SOURCES})
 target_link_libraries(CNG curses)
