Adding gs render demo.

--- a/demo/snake/CMakeLists.txt
+++ b/demo/snake/CMakeLists.txt
@@ -9,4 +9,10 @@ set(SNAKE_COMMON_SOURCES snakepair.cpp snakepair.h
 add_executable(snake ${SNAKE_COMMON_SOURCES} nongsrender.cpp)
 target_link_libraries(snake CNG curses)
 
-# Another use main loop and graphics.
+if(_CNG_NODEFAULT_GS_)
+	# You should compile default Graphics if you want this demo.
+else()
+	# Another use main loop and graphics.
+	add_executable(snakeGs ${SNAKE_COMMON_SOURCES} gsrender.cpp)
+	target_link_libraries(snakeGs CNG curses)
+endif()
